fixed mistake in default config file

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,7 @@
 {
   "DNA": {
     "Mining": [
+      "DNA_2_01.uasset",
       "DNA_2_02.uasset",
       "DNA_2_03.uasset",
       "DNA_2_04.uasset",
